android-x86: update defconfig

--- a/arch/x86/configs/android-x86_defconfig
+++ b/arch/x86/configs/android-x86_defconfig
@@ -2959,7 +2959,7 @@ CONFIG_GPIO_GRGPIO=m
 # I2C GPIO expanders:
 #
 CONFIG_GPIO_ARIZONA=m
-CONFIG_GPIO_CRYSTAL_COVE=m
+CONFIG_GPIO_CRYSTAL_COVE=y
 CONFIG_GPIO_MAX7300=m
 CONFIG_GPIO_MAX732X=m
 CONFIG_GPIO_PCA953X=m
@@ -4145,7 +4145,7 @@ CONFIG_DRM_SIS=m
 CONFIG_DRM_VIA=m
 CONFIG_DRM_SAVAGE=m
 CONFIG_DRM_VMWGFX=m
-# CONFIG_DRM_VMWGFX_FBCON is not set
+CONFIG_DRM_VMWGFX_FBCON=y
 # CONFIG_DRM_GMA500 is not set
 CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
@@ -5402,10 +5402,12 @@ CONFIG_DVB_MN88473=m
 # Android
 #
 CONFIG_ASHMEM=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+# CONFIG_ANDROID_INTF_ALARM_DEV is not set
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
@@ -5785,6 +5787,7 @@ CONFIG_TMP006=m
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_FSL_FTM is not set
+CONFIG_PWM_CRC=y
 CONFIG_PWM_LPSS=m
 CONFIG_PWM_LPSS_PCI=m
 CONFIG_PWM_LPSS_PLATFORM=m
