--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -2789,7 +2789,7 @@ CONFIG_GPIO_LYNXPOINT=m
 # I2C GPIO expanders:
 #
 CONFIG_GPIO_ARIZONA=m
-CONFIG_GPIO_CRYSTAL_COVE=m
+CONFIG_GPIO_CRYSTAL_COVE=y
 CONFIG_GPIO_MAX7300=m
 CONFIG_GPIO_MAX732X=m
 CONFIG_GPIO_PCA953X=m
@@ -3932,7 +3932,7 @@ CONFIG_DRM_SIS=m
 CONFIG_DRM_VIA=m
 CONFIG_DRM_SAVAGE=m
 CONFIG_DRM_VMWGFX=m
-# CONFIG_DRM_VMWGFX_FBCON is not set
+CONFIG_DRM_VMWGFX_FBCON=y
 # CONFIG_DRM_GMA500 is not set
 CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
@@ -5122,10 +5122,12 @@ CONFIG_DVB_MN88473=m
 # Android
 #
 CONFIG_ASHMEM=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+# CONFIG_ANDROID_INTF_ALARM_DEV is not set
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
@@ -5493,6 +5495,7 @@ CONFIG_TMP006=m
 # CONFIG_VME_BUS is not set
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
+CONFIG_PWM_CRC=y
 CONFIG_PWM_LPSS=m
 CONFIG_PWM_LPSS_PCI=m
 CONFIG_PWM_LPSS_PLATFORM=m
