--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -1795,7 +1795,7 @@ CONFIG_NET_VENDOR_AMD=y
 CONFIG_AMD8111_ETH=m
 CONFIG_PCNET32=m
 CONFIG_PCMCIA_NMCLAN=m
-# CONFIG_AMD_XGBE is not set
+CONFIG_AMD_XGBE=m
 CONFIG_NET_XGENE=m
 CONFIG_NET_VENDOR_ARC=y
 CONFIG_NET_VENDOR_ATHEROS=y
@@ -1809,7 +1809,7 @@ CONFIG_B44=m
 CONFIG_B44_PCI_AUTOSELECT=y
 CONFIG_B44_PCICORE_AUTOSELECT=y
 CONFIG_B44_PCI=y
-# CONFIG_BCMGENET is not set
+CONFIG_BCMGENET=m
 CONFIG_BNX2=m
 CONFIG_CNIC=m
 CONFIG_TIGON3=m
@@ -1982,7 +1982,7 @@ CONFIG_PHYLIB=m
 #
 CONFIG_AT803X_PHY=m
 CONFIG_AMD_PHY=m
-# CONFIG_AMD_XGBE_PHY is not set
+CONFIG_AMD_XGBE_PHY=m
 CONFIG_MARVELL_PHY=m
 CONFIG_DAVICOM_PHY=m
 CONFIG_QSEMI_PHY=m
@@ -3926,7 +3926,7 @@ CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_I915=m
 CONFIG_DRM_I915_KMS=y
 CONFIG_DRM_I915_FBDEV=y
-# CONFIG_DRM_I915_PRELIMINARY_HW_SUPPORT is not set
+CONFIG_DRM_I915_PRELIMINARY_HW_SUPPORT=y
 CONFIG_DRM_MGA=m
 CONFIG_DRM_SIS=m
 CONFIG_DRM_VIA=m
@@ -5309,7 +5309,7 @@ CONFIG_KXSD9=m
 CONFIG_MMA8452=m
 CONFIG_KXCJK1013=m
 CONFIG_MMA9551_CORE=m
-# CONFIG_MMA9551 is not set
+CONFIG_MMA9551=m
 CONFIG_MMA9553=m
 
 #
@@ -5427,14 +5427,14 @@ CONFIG_ADJD_S311=m
 CONFIG_AL3320A=m
 CONFIG_APDS9300=m
 CONFIG_CM32181=m
-# CONFIG_CM3218X is not set
+CONFIG_CM3218X=m
 CONFIG_CM3232=m
 CONFIG_CM36651=m
 CONFIG_GP2AP020A00F=m
 CONFIG_ISL29125=m
 CONFIG_HID_SENSOR_ALS=m
 CONFIG_HID_SENSOR_PROX=m
-# CONFIG_JSA1212 is not set
+CONFIG_JSA1212=m
 CONFIG_SENSORS_LM3533=m
 CONFIG_LTR501=m
 CONFIG_TCS3414=m
@@ -5486,7 +5486,7 @@ CONFIG_AS3935=m
 #
 # Proximity sensors
 #
-# CONFIG_SX9500 is not set
+CONFIG_SX9500=m
 
 #
 # Temperature sensors
